--- a/index.html
+++ b/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="navbar">
+        <nav>
+            <ul>
+                <a href="#">
+                    <li>Home</li>
+                </a>
+                <a href="#">
+                    <li>About us</li>
+                </a>
+                <a href="#">
+                    <li>Resume</li>
+                </a>
+                <a href="#">
+                    <li>Contact us</li>
+                </a>
+            </ul>
+        </nav>
+    </div>
+    <!-- //////navbar finish//////// -->
+    <div class="about">
+        <div class="me">
+            <h2>Ankush Thakur</h2>
+            <p>Frontend Developer</p>
+        </div>
+        <div class="img1">
+
+            <img src="https://images.tribuneindia.com/cms/gall_content/2019/3/2019_3$largeimg16_Saturday_2019_074002812.jpg"
+                alt=" beautiful lady">
+        </div>
+    </div>
+
+    <!-- ////about finish////// -->
     
+
+
+
+
+
+    <script src="script.js"></script>
 </body>
+
 </html>
