--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 
 <body>
@@ -35,18 +36,141 @@
         </div>
         <div class="img1">
 
-            <img src="https://images.tribuneindia.com/cms/gall_content/2019/3/2019_3$largeimg16_Saturday_2019_074002812.jpg"
-                alt=" beautiful lady">
+            <!-- <img src="https://images.tribuneindia.com/cms/gall_content/2019/3/2019_3$largeimg16_Saturday_2019_074002812.jpg" alt=" beautiful lady"> -->
         </div>
     </div>
-
     <!-- ////about finish////// -->
-    
+    <div class="contianer3">
+        <div class="aboutus">
+            <span class="move1">About US</span>
+        </div>
+        <p class="abt contant">
+            <span>
+                <details open>
+                    <summary>About Me - Ankush Thakur</summary>
+                    <p> Hello! 👋 I'm <a href="#" class="name1">Ankush Thakur</a>, a passionate frontend developer with
+                        a knack for creating visually
+                        appealing and user-friendly web experiences. With a solid foundation in web technologies and a
+                        keen eye for design, I love bringing ideas to life on the digital canvas.</p>
+                </details>
+                <hr>
+                <details>
+                    <summary>My Journey</summary>
+                    <p>My journey in the world of web development began in Lockdown when I discovered my fascination for
+                        crafting pixel-perfect websites that seamlessly blend aesthetics with functionality. Since then,
+                        I've embarked on an exciting adventure, constantly expanding my skill set and keeping up with
+                        the ever-evolving landscape of frontend technologies.</p>
+                </details>
+                <hr>
+                <details>
+                    <summary>What I Do</summary>
+                    <p>
+                        My expertise lies in turning concepts and wireframes into responsive and interactive websites. I
+                        specialize in HTML, CSS, and JavaScript, and I'm well-versed in using modern frontend frameworks
+                        such as React, to build dynamic user interfaces. I believe that a website should not only look
+                        great but also provide an intuitive and enjoyable experience for the users.
+                    </p>
+                </details>
+                <hr>
+                <details>
+                    <summary>My Approach</summary>
+                    <p>I believe in a user-centered approach to development. Understanding the end-users and their needs
+                        is at the core of every project I undertake. I strive to create interfaces that are not just
+                        visually appealing but also highly usable and accessible to a diverse audience. Clean and
+                        maintainable code is essential to me, as it ensures that the project remains scalable and
+                        adaptable in the long run.</p>
+                </details>
+                <hr>
+                <details>
+                    <summary>Continuous Learning</summary>
+                    <p>In the rapidly evolving world of web development, staying up-to-date is crucial. I'm always
+                        excited to learn about new tools, libraries, and techniques that can enhance my craft. Whether
+                        it's delving into the latest CSS methodologies or experimenting with cutting-edge JavaScript
+                        features, I'm committed to refining my skills and applying them to create exceptional web
+                        experiences.</p>
+                </details>
+                <hr>
+                <details>
+                    <summary>Let's Connect</summary>
+                    <p>
+                    <p>I'm not just passionate about code; I'm also enthusiastic about collaborating with fellow
+                        developers, designers, and clients. If you have a project in mind, want to discuss the latest
+                        industry trends, or simply want to geek out about web development, I'd love to hear from you.
+                        Feel free to reach out through <a href="mailto:at2619760@gmail.com" target="_blank"
+                            class="name1">Gmail</a>. <br><br>
+
+                        Thank you for visiting my corner of the web. Let's build something amazing together!</p>
+        </p>
+        </details>
+        <hr>
+        </span>
+
+        </p>
+        <div class="contianer3">
+            <div class="aboutus">
+                <span class="move1">Contect us</span>
+            </div>
+            <div class="contant">
+                <form action="https://formspree.io/f/xnqkboqv" method="POST">
+                    <label for="fname">Name</label> <br>
+                    <input type="text" name="fname" id="fname" placeholder="Ankush" required> <br>
+                    <label for="email">Email</label><br>
+                    <input type="text" name="email" id="email" placeholder="example@.com" reqired> <br>
+                    <label for="tel">phone no.</label><br>
+                    <input type="text" name="tel" id="tel" maxlength="10" placeholder="09876543421" required> <br>
+                    <label for="address">Address</label><br>
+                    <input type="text" name="address" id="address" placeholder="address" required> <br>
+                    <label for="query">message</label> <br>
+                    <textarea name="message" id="query" cols="30" rows="10"></textarea><br>
+                     <button class="submit">Submit</button>
+                </form>
+            </div>
+            <!-- <div class="four">
+                <div class="manage">
+                    <img class="img1" src="/img/tm.jpg" alt="">
+                      <span>Team Management</span>
+                </div>
+                <div class="solve">
+                    <img class="img1" src="/img/prosolving.png" alt="">
+                     <span>Problem Solving</span>
+                </div>
+                <div class="trust">
+                    <img class="img1" src="/img/trust.png" alt="">
+                     <span>User Trust</span>    
+                </div>
+                <div class="user">
+                    <img class="img1" src="/img/usrsetifi.png" alt="">
+                     <span>User Satisfaction</span>
+                </div>
+            </div> -->
+            <div class="four">
+                <div class="card">
+                    <img src="/img/tm.jpg" alt="">
+                    <span>Team Management</span>
+                </div>
+                <div class="card">
+                    <img src="/img/prosolving.png" alt="">
+                    <span>Problem Solving</span>
+                </div>
+                <div class="card">
+                    <img src="/img/trust.png" alt="">
+                    <span>User Trust</span>
+                </div>
+                <div class="card">
+                    <img src="/img/usrsetifi.png" alt="">
+                    <span>User Satisfaction</span>
+                </div>
+            </div>
+     
 
 
-
-
-
+    </div>
+    <footer>
+        <h3>Follow Me on Social Media:</h3>
+        <a href="https://instagram.com/__ankush_kt/">
+            <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="">
+        </a>
+    </footer>
     <script src="script.js"></script>
 </body>
 
